--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ svg {
 .container {
   display: flex;
   width: 100vw;
+  height: 100vh;
   justify-content: space-between;
 }
 
@@ -128,6 +129,8 @@ svg {
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
+    overflow: hidden;
   }
 }
 
